tests/baselines/reference/parserClassDeclaration5.errors.txt
parserClassDeclaration5.ts(1,17): error TS2304: Cannot find name 'A'.
parserClassDeclaration5.ts(1,30): error TS2304: Cannot find name 'B'.
parserClassDeclaration5.ts(1,32): error TS1175: 'implements' clause already seen.


==== parserClassDeclaration5.ts (3 errors) ====
    class C extends A implements B implements C {
                    ~
!!! error TS2304: Cannot find name 'A'.
                                 ~
!!! error TS2304: Cannot find name 'B'.
                                   ~~~~~~~~~~
!!! error TS1175: 'implements' clause already seen.
    }